--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -22,9 +22,8 @@
 }
 .main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  padding-top: 60px;
 }
 .main .icon {
   width: 34px;
@@ -65,7 +64,23 @@
   font-weight: bold;
   margin-top: 40px;
 }
-.map {
-  width: 100%;
-  height: 500px;
+.inputSection, .map {
+  width: 50%;
+  height: 100%;
+}
+.inputSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.textarea {
+  height: 200px;
+  width: 400px;
+  margin-top: 50px;
+}
+.subTitle {
+  margin: 20px 0;
+  width: 500px;
+  text-align: center;
 }
