--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -77,10 +77,14 @@
 .textarea {
   height: 200px;
   width: 400px;
-  margin-top: 50px;
 }
 .subTitle {
   margin: 20px 0;
   width: 500px;
   text-align: center;
+}
+.queryTitle {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 18px;
 }
