--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -88,3 +88,14 @@
   margin-bottom: 10px;
   font-size: 18px;
 }
+.loading {
+  position: absolute;
+  margin: auto;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
