--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -16,7 +16,7 @@
 .main,
 .main input {
   font-size: 16px;
-  line-height: 24px;
+  /* line-height: 24px; */
   color: #353740;
   font-family: "ColfaxAI", Helvetica, sans-serif;
 }
@@ -30,7 +30,7 @@
 }
 .main h3 {
   font-size: 32px;
-  line-height: 40px;
+  /* line-height: 40px; */
   font-weight: bold;
   color: #202123;
   margin: 40px 0 40px;
@@ -98,4 +98,40 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+/* スマホ時の処理 */
+
+@media screen and (max-width: 768px) {
+  .main {
+    flex-direction: column-reverse
+  }
+  .main h3 {
+    margin: 20px 0 20px;
+    font-size: 21px;
+  }
+  .main form {
+    width: 100%;
+  }
+  .main input[type="text"] {
+    margin-bottom: 16px;
+  }
+  .inputSection, .map {
+    width: 100%;
+    height: 50%;
+  }
+  .inputSection {
+    padding: 30px;
+    box-sizing: border-box;
+    justify-content: flex-start;
+    overflow: auto;
+  }
+  .textarea {
+    width: 100%;
+    min-height: 100px;
+  }
+  .subTitle {
+    width: 100%;
+  }
 }
